Se agrego region

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             <input type="text" id="input" value="">          
         </form>
         <button id="submit">ENVIAR</button>   
-
-        <div id="respuesta"></div>
+        <h1>Capital</h1>
+        <div id="respuestaNombre"></div>
+        <h1>Region</h1>
+        <div id="respuestaRegion"></div>
         
     </section>
 </main>
